Doc modify channel api responses type
