# docs/swagger.json
@@ -28,7 +28,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ChannelEntity.Channel"
+                            }
                         }
                     }
                 }
